--- a/index.html
+++ b/index.html
@@ -1,168 +1,169 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LukeTA2 - Tattoo Artist</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet" />
   <style>
-    body {
+    @font-face {
+      font-family: 'LemonMilk';
+      src: url('img/LEMONMILK-Regular.otf') format('opentype');
+    }
+
+    * {
       margin: 0;
-      font-family: 'Montserrat', sans-serif;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'LemonMilk', sans-serif;
       background-color: #000;
       color: white;
     }
 
     header {
-      position: relative;
-      height: 100vh;
-      background: url('img/hero.jpg') no-repeat center center/cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 20px 40px;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 0 5vw;
-      color: white;
+      justify-content: space-between;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 2;
     }
 
     .logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      font-size: 28px;
-      font-weight: bold;
-      letter-spacing: 2px;
+      height: 60px;
     }
 
-    .menu {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-    }
-
-    .menu a {
-      margin-left: 20px;
-      color: #d5984a;
+    nav a {
+      color: #d29952;
       text-decoration: none;
-      font-weight: 400;
-      transition: color 0.3s ease;
+      margin-left: 30px;
+      font-size: 14px;
+      transition: color 0.3s;
     }
 
-    .menu a:hover {
+    nav a:hover {
       color: white;
     }
 
+    .hero {
+      height: 100vh;
+      display: flex;
+      background: url('img/hero.jpg') center/cover no-repeat;
+      position: relative;
+    }
+
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      z-index: 1;
+    }
+
     .hero-text {
-      max-width: 600px;
-      margin-top: 200px;
+      position: relative;
+      z-index: 2;
+      width: 100%;
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      text-align: right;
+      color: white;
     }
 
     .hero-text h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
+      font-size: 40px;
+      font-weight: bold;
     }
 
-    .hero-text h1 span {
-      color: #d5984a;
+    .hero-text span {
+      color: #d29952;
     }
 
     .hero-text p {
-      font-size: 18px;
-      line-height: 1.6;
-    }
-
-    section {
-      padding: 60px 5vw;
-      background-color: #000;
-    }
-
-    h2 {
-      text-align: center;
-      color: #d5984a;
-      margin-bottom: 20px;
-    }
-
-    .gallery {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
-
-    .gallery img {
-      border: 2px solid #d5984a;
-      border-radius: 8px;
-      max-width: 300px;
-      height: auto;
+      margin-top: 10px;
+      font-size: 14px;
+      max-width: 400px;
     }
 
     .social {
       position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translateY(-50%);
+      top: 120px;
+      left: 40px;
       display: flex;
       flex-direction: column;
       gap: 20px;
+      z-index: 999;
     }
 
-    .social a img {
-      width: 30px;
+    .social img {
+      width: 32px;
       height: auto;
-      filter: none;
       transition: filter 0.3s ease;
+      filter: brightness(0.8);
     }
 
-    .social a img:hover {
-      filter: brightness(0) invert(1);
+    .social img:hover {
+      filter: brightness(1.2) invert(1);
+    }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 10px;
+      }
+
+      .hero-text {
+        align-items: center;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">LUKE<span style="color:white">TA2</span></div>
-    <div class="menu">
+    <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo">
+    <nav>
       <a href="#home">HOME</a>
       <a href="#tattoo">TATTOO</a>
-      <a href="#chi-sono">CHI SONO</a>
+      <a href="#chisono">CHI SONO</a>
       <a href="#contatti">CONTATTI</a>
       <a href="#blog">BLOG</a>
-    </div>
-    <div class="social">
-      <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="img/whatsapp.png" alt="WhatsApp"></a>
-    </div>
-    <div class="hero-text">
-      <h1>PER TE IL MIGLIOR <span>DESIGN</span> DEL TATUAGGIO</h1>
-      <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
-    </div>
+    </nav>
   </header>
 
-  <section id="chi-sono">
-    <h2>Chi sono</h2>
-    <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-      Ciao, sono Luca Cirillo, in arte <strong>LukeTA2</strong>. Realizzo tatuaggi ispirati alla geometria sacra,
-      mandala, tecniche watercolor e bianco e nero. Ogni disegno è unico, pensato per armonizzarsi con il corpo
-      e la personalità di chi lo indossa. Spazio dai tatuaggi piccoli e fine line ai giapponesi, geometrici, blackout,
-      figurativi e stile Anime/Manga/Nerd.
-    </p>
-  </section>
+  <div class="social">
+    <a href="https://www.facebook.com/luketa2/" target="_blank">
+      <img src="img/facebook.png" alt="Facebook" />
+    </a>
+    <a href="https://www.instagram.com/luketa2" target="_blank">
+      <img src="img/instagram.png" alt="Instagram" />
+    </a>
+    <a href="https://wa.me/393482463458" target="_blank">
+      <img src="img/whatsapp.png" alt="WhatsApp" />
+    </a>
+  </div>
 
-  <section id="tattoo">
-    <h2>Galleria</h2>
-    <div class="gallery">
-      <img src="img/mandala.jpg" alt="Mandala">
-      <img src="img/biancoenero.jpg" alt="Bianco e Nero">
-      <img src="img/watercolor.jpg" alt="Watercolor">
+  <section class="hero" id="home">
+    <div class="hero-text">
+      <h1>PER TE IL MIGLIOR <span>DESIGN</span><br>DEL TATUAGGIO</h1>
+      <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
     </div>
-  </section>
-
-  <section id="contatti">
-    <h2>Contattami</h2>
-    <p style="text-align: center;">Modena, Italia · <a href="mailto:luketa2@email.com" style="color:#d5984a;">luketa2@email.com</a></p>
   </section>
 </body>
 </html>
