--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     }
 
     .logo {
-      height: 60px;
+      height: 80px;
     }
 
     nav a {
       color: #d29952;
       text-decoration: none;
       margin-left: 30px;
-      font-size: 14px;
+      font-size: 18px;
       transition: color 0.3s;
     }
 
@@ -83,7 +83,7 @@
     }
 
     .hero-text h1 {
-      font-size: 40px;
+      font-size: 64px;
       font-weight: bold;
     }
 
@@ -93,22 +93,22 @@
 
     .hero-text p {
       margin-top: 10px;
-      font-size: 14px;
-      max-width: 400px;
+      font-size: 20px;
+      max-width: 600px;
     }
 
     .social {
       position: absolute;
-      top: 120px;
+      top: 140px;
       left: 40px;
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 25px;
       z-index: 999;
     }
 
     .social img {
-      width: 32px;
+      width: 48px;
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -131,6 +131,28 @@
       .hero-text {
         align-items: center;
         text-align: center;
+      }
+
+      .hero-text h1 {
+        font-size: 40px;
+      }
+
+      .hero-text p {
+        font-size: 16px;
+      }
+
+      .social {
+        top: 100px;
+        left: 20px;
+        gap: 20px;
+      }
+
+      .social img {
+        width: 36px;
+      }
+
+      .logo {
+        height: 60px;
       }
     }
   </style>
