--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LukeTA2 - Tattoo Artist</title>
+  <title>LUKE TA2 - Tattoo Artist</title>
   <style>
     @font-face {
-      font-family: 'LemonMilk';
+      font-family: 'Lemon Milk';
       src: url('img/LEMONMILK-Regular.otf') format('opentype');
     }
 
@@ -17,32 +17,32 @@
     }
 
     body {
-      font-family: 'LemonMilk', sans-serif;
-      background-color: #000;
+      font-family: 'Lemon Milk', sans-serif;
       color: white;
+      background-color: black;
+      overflow-x: hidden;
     }
 
     header {
       position: absolute;
       top: 0;
-      left: 0;
       width: 100%;
-      padding: 20px 40px;
+      padding: 10px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.6);
-      z-index: 2;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 10;
     }
 
     .logo {
-      height: 80px;
+      height: 60px;
     }
 
     nav a {
-      color: #d29952;
-      text-decoration: none;
       margin-left: 30px;
+      color: #e0a656;
+      text-decoration: none;
       font-size: 18px;
       transition: color 0.3s;
     }
@@ -52,140 +52,87 @@
     }
 
     .hero {
-      height: 100vh;
       display: flex;
-      background: url('img/hero.jpg') center/cover no-repeat;
-      position: relative;
+      height: 100vh;
+      width: 100%;
     }
 
-    .hero::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
-      z-index: 1;
+    .hero img {
+      width: 33.333%;
+      object-fit: cover;
+      height: 100vh;
     }
 
     .hero-text {
-      position: relative;
-      z-index: 2;
-      width: 100%;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-end;
+      position: absolute;
+      top: 55%;
+      right: 5%;
+      transform: translateY(-50%);
       text-align: right;
-      color: white;
+      max-width: 40%;
     }
 
     .hero-text h1 {
-      font-size: 64px;
-      font-weight: bold;
+      font-size: 48px;
+      line-height: 1.3;
     }
 
-    .hero-text span {
-      color: #d29952;
+    .hero-text h1 span {
+      color: #e0a656;
     }
 
     .hero-text p {
-      margin-top: 10px;
-      font-size: 20px;
-      max-width: 600px;
+      font-size: 16px;
+      margin-top: 15px;
     }
 
-    .social {
+    .social-icons {
       position: absolute;
-      top: 140px;
-      left: 40px;
+      top: 120px;
+      left: 30px;
       display: flex;
       flex-direction: column;
-      gap: 25px;
-      z-index: 999;
+      gap: 20px;
     }
 
-    .social img {
-      width: 48px;
-      height: auto;
-      transition: filter 0.3s ease;
-      filter: brightness(0.8);
+    .social-icons a img {
+      width: 36px;
+      height: 36px;
+      transition: filter 0.3s;
     }
 
-    .social img:hover {
-      filter: brightness(1.2) invert(1);
-    }
-
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 10px;
-      }
-
-      .hero-text {
-        align-items: center;
-        text-align: center;
-      }
-
-      .hero-text h1 {
-        font-size: 40px;
-      }
-
-      .hero-text p {
-        font-size: 16px;
-      }
-
-      .social {
-        top: 100px;
-        left: 20px;
-        gap: 20px;
-      }
-
-      .social img {
-        width: 36px;
-      }
-
-      .logo {
-        height: 60px;
-      }
+    .social-icons a img:hover {
+      filter: brightness(10);
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo">
+    <img src="img/luketa2-logo.png" alt="Logo" class="logo">
     <nav>
-      <a href="#home">HOME</a>
+      <a href="#">HOME</a>
       <a href="#tattoo">TATTOO</a>
-      <a href="#chisono">CHI SONO</a>
+      <a href="#chi">CHI SONO</a>
       <a href="#contatti">CONTATTI</a>
       <a href="#blog">BLOG</a>
     </nav>
   </header>
 
-  <div class="social">
-    <a href="https://www.facebook.com/luketa2/" target="_blank">
-      <img src="img/facebook.png" alt="Facebook" />
-    </a>
-    <a href="https://www.instagram.com/luketa2" target="_blank">
-      <img src="img/instagram.png" alt="Instagram" />
-    </a>
-    <a href="https://wa.me/393482463458" target="_blank">
-      <img src="img/whatsapp.png" alt="WhatsApp" />
-    </a>
-  </div>
+  <div class="hero">
+    <img src="img/biancoenero.jpg" alt="Tattoo 1">
+    <img src="img/watercolor.jpg" alt="Tattoo 2">
+    <img src="img/mandala.jpg" alt="Tattoo 3">
 
-  <section class="hero" id="home">
     <div class="hero-text">
       <h1>PER TE IL MIGLIOR <span>DESIGN</span><br>DEL TATUAGGIO</h1>
       <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
     </div>
-  </section>
+
+    <div class="social-icons">
+      <a href="https://www.facebook.com/luketa2/"><img src="img/facebook.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/luketa2"><img src="img/instagram.png" alt="Instagram"></a>
+      <a href="tel:3482463458"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+    </div>
+  </div>
 </body>
 </html>
