--- a/index.html
+++ b/index.html
@@ -24,30 +24,26 @@
 
     header {
       position: absolute;
-      top: 0;
+      top: 20px;
       left: 0;
       width: 100%;
-      padding: 30px 60px 0 60px;
+      padding: 0 40px;
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
-      background-color: rgba(0, 0, 0, 0.4);
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.6);
       z-index: 2;
     }
 
     .logo {
-      height: 110px;
-    }
-
-    nav {
-      margin-top: 25px;
+      height: 100px;
     }
 
     nav a {
       color: #d29952;
       text-decoration: none;
       margin-left: 50px;
-      font-size: 22px;
+      font-size: 24px;
       transition: color 0.3s;
     }
 
@@ -77,13 +73,12 @@
       position: relative;
       z-index: 2;
       width: 100%;
-      padding: 60px;
-      margin-top: 180px;
+      padding: 40px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-start;
-      text-align: left;
+      align-items: flex-end;
+      text-align: right;
       color: white;
     }
 
@@ -97,23 +92,23 @@
     }
 
     .hero-text p {
-      margin-top: 20px;
-      font-size: 26px;
-      max-width: 700px;
+      margin-top: 10px;
+      font-size: 24px;
+      max-width: 600px;
     }
 
     .social {
       position: absolute;
-      top: 180px;
+      bottom: 180px;
       left: 40px;
       display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 25px;
       z-index: 999;
     }
 
     .social img {
-      width: 56px;
+      width: 64px;
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -147,17 +142,21 @@
       }
 
       .social {
-        top: 120px;
+        bottom: 100px;
         left: 20px;
         gap: 20px;
       }
 
       .social img {
-        width: 40px;
+        width: 48px;
       }
 
       .logo {
         height: 80px;
+      }
+
+      nav a {
+        font-size: 18px;
       }
     }
   </style>
