--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LukeTA2 - Tattoo Artist</title>
   <style>
     @font-face {
@@ -24,10 +24,10 @@
 
     header {
       position: absolute;
-      top: 20px;
+      top: 0;
       left: 0;
       width: 100%;
-      padding: 0 40px;
+      padding: 20px 40px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -36,14 +36,14 @@
     }
 
     .logo {
-      height: 100px;
+      height: 80px;
     }
 
     nav a {
       color: #d29952;
       text-decoration: none;
-      margin-left: 50px;
-      font-size: 24px;
+      margin-left: 30px;
+      font-size: 18px;
       transition: color 0.3s;
     }
 
@@ -73,13 +73,13 @@
       position: relative;
       z-index: 2;
       width: 100%;
+      height: 100%;
       padding: 40px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: flex-end;
       text-align: right;
-      color: white;
     }
 
     .hero-text h1 {
@@ -91,15 +91,14 @@
       color: #d29952;
     }
 
-    .hero-text p {
-      margin-top: 10px;
-      font-size: 24px;
-      max-width: 600px;
+    .hero-text .hero-subtitle {
+      font-size: 28px;
+      margin-bottom: 30px;
     }
 
     .social {
       position: absolute;
-      bottom: 180px;
+      top: 140px;
       left: 40px;
       display: flex;
       flex-direction: column;
@@ -108,7 +107,7 @@
     }
 
     .social img {
-      width: 64px;
+      width: 48px;
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -137,26 +136,22 @@
         font-size: 40px;
       }
 
-      .hero-text p {
-        font-size: 18px;
+      .hero-text .hero-subtitle {
+        font-size: 20px;
       }
 
       .social {
-        bottom: 100px;
+        top: 100px;
         left: 20px;
         gap: 20px;
       }
 
       .social img {
-        width: 48px;
+        width: 36px;
       }
 
       .logo {
-        height: 80px;
-      }
-
-      nav a {
-        font-size: 18px;
+        height: 60px;
       }
     }
   </style>
@@ -187,8 +182,8 @@
 
   <section class="hero" id="home">
     <div class="hero-text">
-      <h1>PER TE IL MIGLIOR <span>DESIGN</span><br>DEL TATUAGGIO</h1>
-      <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
+      <p class="hero-subtitle">LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
+      <h1>PER TE IL MIGLIOR <span>DESIGN</span> DEL TATUAGGIO</h1>
     </div>
   </section>
 </body>
