--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LukeTA2 - Tattoo Artist</title>
   <style>
     @font-face {
@@ -70,35 +70,33 @@
     }
 
     .hero-text {
-      position: relative;
+      position: absolute;
+      bottom: 40px;
+      right: 40px;
       z-index: 2;
-      width: 100%;
-      height: 100%;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: flex-end;
       text-align: right;
+      color: white;
     }
 
     .hero-text h1 {
       font-size: 64px;
       font-weight: bold;
+      line-height: 1.1;
     }
 
     .hero-text span {
       color: #d29952;
     }
 
-    .hero-text .hero-subtitle {
-      font-size: 28px;
-      margin-bottom: 30px;
+    .hero-text p {
+      font-size: 24px;
+      margin-top: 15px;
+      white-space: nowrap;
     }
 
     .social {
       position: absolute;
-      top: 140px;
+      top: 160px;
       left: 40px;
       display: flex;
       flex-direction: column;
@@ -107,7 +105,7 @@
     }
 
     .social img {
-      width: 48px;
+      width: 60px;
       height: auto;
       transition: filter 0.3s ease;
       filter: brightness(0.8);
@@ -130,24 +128,26 @@
       .hero-text {
         align-items: center;
         text-align: center;
+        right: 20px;
+        left: 20px;
       }
 
       .hero-text h1 {
-        font-size: 40px;
+        font-size: 36px;
       }
 
-      .hero-text .hero-subtitle {
-        font-size: 20px;
+      .hero-text p {
+        font-size: 18px;
       }
 
       .social {
-        top: 100px;
+        top: 120px;
         left: 20px;
         gap: 20px;
       }
 
       .social img {
-        width: 36px;
+        width: 40px;
       }
 
       .logo {
@@ -182,8 +182,8 @@
 
   <section class="hero" id="home">
     <div class="hero-text">
-      <p class="hero-subtitle">LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
-      <h1>PER TE IL MIGLIOR <span>DESIGN</span> DEL TATUAGGIO</h1>
+      <h1>PER TE IL MIGLIOR <span>DESIGN</span><br>DEL TATUAGGIO</h1>
+      <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
     </div>
   </section>
 </body>
