--- a/index.html
+++ b/index.html
@@ -3,190 +3,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LukeTA2 - Tattoo Artist</title>
+  <title>LUKE TA2</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    @font-face {
-      font-family: 'LemonMilk';
-      src: url('img/LEMONMILK-Regular.otf') format('opentype');
-    }
-
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'LemonMilk', sans-serif;
-      background-color: #000;
-      color: white;
-    }
-
-    header {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 20px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: rgba(0, 0, 0, 0.6);
-      z-index: 2;
-    }
-
-    .logo {
-      height: 90px;
-    }
-
-    nav a {
-      color: #d29952;
-      text-decoration: none;
-      margin-left: 30px;
-      font-size: 22px;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: white;
+      font-family: 'LEMON MILK', sans-serif;
     }
 
     .hero {
+      background-image: url('img/hero.jpg');
+      background-size: cover;
+      background-position: center;
       height: 100vh;
+      color: white;
       display: flex;
-      background: url('img/hero.jpg') center/cover no-repeat;
-      position: relative;
-    }
-
-    .hero::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
-      z-index: 1;
+      flex-direction: column;
+      justify-content: flex-end;
+      padding: 40px;
     }
 
     .hero-text {
-      position: absolute;
-      z-index: 2;
-      bottom: 80px;
-      width: 100%;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;
+      text-align: right;
+      margin-bottom: 120px;
     }
 
     .hero-text h1 {
       font-size: 48px;
-      font-weight: bold;
-    }
-
-    .hero-text span {
-      color: #d29952;
+      margin: 0;
     }
 
     .hero-text p {
-      margin-top: 20px;
-      font-size: 24px;
-      max-width: 900px;
+      font-size: 22px;
+      margin-top: 12px;
+    }
+
+    .navbar {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px 40px;
+      display: flex;
+      gap: 30px;
+      font-size: 16px;
+    }
+
+    .navbar a {
+      color: #d28c3c;
+      text-decoration: none;
+    }
+
+    .logo {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      height: 60px;
     }
 
     .social {
       position: absolute;
-      top: 140px;
-      left: 40px;
+      top: 120px;
+      left: 20px;
       display: flex;
       flex-direction: column;
-      gap: 25px;
-      z-index: 999;
+      gap: 20px;
     }
 
     .social img {
-      width: 48px;
-      height: auto;
-      transition: filter 0.3s ease;
-      filter: brightness(0.8);
-    }
-
-    .social img:hover {
-      filter: brightness(1.2) invert(1);
-    }
-
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 10px;
-      }
-
-      .hero-text {
-        align-items: center;
-        text-align: center;
-        bottom: 40px;
-      }
-
-      .hero-text h1 {
-        font-size: 32px;
-      }
-
-      .hero-text p {
-        font-size: 18px;
-      }
-
-      .social {
-        top: 100px;
-        left: 20px;
-        gap: 20px;
-      }
-
-      .social img {
-        width: 36px;
-      }
-
-      .logo {
-        height: 60px;
-      }
+      width: 40px;
+      height: 40px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="img/luketa2-logo.png" alt="LukeTA2 Logo" class="logo">
-    <nav>
-      <a href="#home">HOME</a>
-      <a href="#tattoo">TATTOO</a>
-      <a href="#chisono">CHI SONO</a>
-      <a href="#contatti">CONTATTI</a>
-      <a href="#blog">BLOG</a>
-    </nav>
-  </header>
+  <img src="img/luketa2-logo.png" alt="Logo" class="logo" />
 
-  <div class="social">
-    <a href="https://www.facebook.com/luketa2/" target="_blank">
-      <img src="img/facebook.png" alt="Facebook" />
-    </a>
-    <a href="https://www.instagram.com/luketa2" target="_blank">
-      <img src="img/instagram.png" alt="Instagram" />
-    </a>
-    <a href="https://wa.me/393482463458" target="_blank">
-      <img src="img/whatsapp.png" alt="WhatsApp" />
-    </a>
+  <div class="navbar">
+    <a href="#">HOME</a>
+    <a href="#">TATTOO</a>
+    <a href="#">CHI SONO</a>
+    <a href="#">CONTATTI</a>
+    <a href="#">BLOG</a>
   </div>
 
-  <section class="hero" id="home">
+  <div class="social">
+    <a href="https://www.facebook.com"><img src="img/facebook.png" alt="Facebook"></a>
+    <a href="https://www.instagram.com"><img src="img/instagram.png" alt="Instagram"></a>
+    <a href="https://wa.me"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+  </div>
+
+  <section class="hero">
     <div class="hero-text">
       <p>LE TUE IDEE MERITANO ISPIRAZIONE, TECNICA E CUORE.</p>
-      <h1>PER TE IL MIGLIOR <span>DESIGN</span><br>DEL TATUAGGIO</h1>
+      <h1>PER TE IL MIGLIOR <span style="color: #d28c3c;">DESIGN</span><br>DEL TATUAGGIO</h1>
     </div>
   </section>
 </body>
