Testo più grande e su una riga per la frase ispirazionale

--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
     }
 
     .hero-text p {
-      margin-top: 20px;
-      font-size: 24px;
-      max-width: 600px;
+      margin-top: 30px;
+      font-size: 36px;
+      max-width: none;
+      white-space: nowrap;
     }
 
     .social {
@@ -140,7 +141,8 @@
       }
 
       .hero-text p {
-        font-size: 16px;
+        font-size: 20px;
+        white-space: normal;
       }
 
       .social {
